# starling_controller

./: Dockerfile  LICENSE  Makefile  README.md
Murmuration/: LICENSE  README.md
Murmuration/cli/: common
Murmuration/cli/commands/: deploy  install  simulator  start  status  stop  utils
Murmuration/cli/testing/: dockerfile
Murmuration/config/: kind_config.yaml  vehicle_marsupial_config.yaml
Murmuration/docker-compose/ardupilot/: README.md  docker-compose.ap-gazebo.linux.yml  docker-compose.ap-gazebo.windows.yml  docker-compose.arducopter.linux.yml  docker-compose.arducopter.windows.yml
Murmuration/docker-compose/px4/: README.md  docker-compose.core.linux.yml  docker-compose.core.windows.yml  docker-compose.simple-offboard.2-drones.linux.yml  docker-compose.simple-offboard.2-drones.windows.yml  docker-compose.simple-offboard.3-drones.linux.yml  docker-compose.simple-offboard.3-drones.windows.yml  docker-compose.simple-offboard.windows.yml  docker-compose.ui-example.windows.yml
Murmuration/kubernetes/examples/position-trajectory/: k8.sync_position_trajectory.yaml
Murmuration/kubernetes/examples/simple-offboard/: k8.multi-vehicle-allocator.yaml  k8.simple_offboard.daemonset.yaml  k8.starling-ui-dashly.yaml
Murmuration/kubernetes/simulation/: k8.gazebo-brl.yaml  k8.gazebo-iris.amd64.yaml  k8.px4-sitl-tracking.daemonset.yaml  k8.px4-sitl.daemonset.yaml
Murmuration/scripts/: start_k3s_agent.sh
Murmuration/tmp/: kind_config.yaml  vehicle0.config
buildtools/: docker-bake.hcl
deployment/: kubernetes.yaml
starling_controller/: run.sh
starling_controller/offboard_controller/: package.xml  setup.cfg  setup.py
starling_controller/offboard_controller/offboard_controller/: main.py
starling_controller/onboard_controller/: CMakeLists.txt  package.xml
starling_controller/onboard_controller/include/: controller.hpp  main.hpp  state.hpp
starling_controller/onboard_controller/launch/: onboard_controller.launch.xml
starling_controller/onboard_controller/src/: controller.cpp  main.cpp
starling_controller/template_msgs/: CMakeLists.txt  package.xml
starling_controller/template_msgs/msg/: NotifyVehicles.msg  TargetAngle.msg
