<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onboard_controller</name>
  <version>0.0.0</version>
  <description>onboard_controller template</description>
  <maintainer email="duy.nd202357@sis.hust.edu.vn">root</maintainer>
  <license>MIT License @ NDDuy 2023</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros_extras</depend>

  <!-- List custom message dependencies here -->
  <!-- <depend>ros2_msgs_template</depend> -->

  <depend>template_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
